Refactored new Integer(int) calls into Integer.valueOf(int) calls, for when removing from Collection, as Integer(int) has been deprecated, and Integer.valueOf(int) does caching which will help performance.